--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@usedapp/core": "^1.0.2",
     "bootstrap": "^5.1.3",
+    "ganache": "^7.1.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "react-scripts": "4.0.2",
+    "truffle": "^5.5.14",
+    "web-vitals": "^2.1.0",
+    "web3": "^1.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
