--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@usedapp/core": "^1.0.2",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.8.1",
     "ganache": "^7.1.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
