--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "@usedapp/core": "^1.0.2",
+    "@usedapp/core": "^0.3.10",
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.1",
     "ganache": "^7.1.0",
+    "material-ui-core": "^5.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
+    "react-material-ui-form-validator": "^3.0.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.2",
-    "truffle": "^5.5.14",
+    "react-scripts": "^5.0.1",
+    "react-spinners": "^0.12.0",
+    "react-toastify": "^9.0.1",
+    "truffle": "^5.1.67",
     "web-vitals": "^2.1.0",
     "web3": "^1.7.3"
   },
