--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
     "@testing-library/user-event": "^13.2.1",
     "@usedapp/core": "^1.0.2",
     "bootstrap": "^5.1.3",
+    "contracts": "./blockchain/build/contracts",
     "firebase": "^9.8.1",
     "ganache": "^7.1.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-material-ui-form-validator": "^3.0.0",
     "react-phone-number-input": "^3.1.52",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.2",
     "truffle": "^5.5.14",
     "web-vitals": "^2.1.0",
-    "web3": "^1.7.3",
-    "contracts": "./blockchain/build/contracts"
+    "web3": "^1.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
