--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bootstrap": "^5.1.3",
     "contracts": "./blockchain/build/contracts",
     "firebase": "^9.8.1",
-    "ganache": "^7.1.0",
+    "ganache": "^7.3.2",
+    "ganache-cli": "^6.12.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
